--- a/web-client/package.json
+++ b/web-client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "react": "^19.0.0",
