--- a/ecs-server/divergent-association-task-main/requirements.txt
+++ b/ecs-server/divergent-association-task-main/requirements.txt
@@ -10,14 +10,17 @@ flask-cors==5.0.1
 future==1.0.0
 gevent==24.11.1
 greenlet==3.1.1
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 numpy==2.2.3
+packaging==24.2
 PySocks==1.7.1
 requests==2.32.3
 requests-file==2.1.0
+scipy==1.15.2
 tldextract==5.1.3
 urllib3==2.3.0
 Werkzeug==3.1.3
