added a new command to the makefile and made a special made file for  the render website

--- a/ecs-server/divergent-association-task-main/Makefile
+++ b/ecs-server/divergent-association-task-main/Makefile
@@ -19,6 +19,13 @@ words.txt:
 .PHONY: run
 .PHONY: install
 
+rendertest:
+	gunicorn -w 4 -b 0.0.0.0:5000 rendertest:app
+
+fromscratch:
+	make install
+	make runserver
+
 devserver:
 	flask --app examples --debug run
 
