--- a/ecs-server/.gitignore
+++ b/ecs-server/.gitignore
@@ -1,4 +1,10 @@
 glove.840B.300d.txt
 glove.840B.300d.zip
+glove.6B.300d.txt
+glove.6B.200d.txt
+glove.6B.100d.txt
+glove.6B.50d.txt
+glove.6B.zip
+
 backend/
 __pycache__
