--- a/web-client/package.json
+++ b/web-client/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "firebase": "^11.4.0",
+    "firebase-tools": "^13.33.0",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "react": "^19.0.0",
