--- a/web-client/package.json
+++ b/web-client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "next rm --rf build"
   },
   "dependencies": {
     "cors": "^2.8.5",
