new docker and stuff

--- a/ecs-server/Dockerfile
+++ b/ecs-server/Dockerfile
@@ -1,15 +1,35 @@
-FROM ubuntu:latest
-WORKDIR /usr/local/app
-RUN apt-get -y update
-RUN apt-get install -y git
-RUN apt-get install -y curl
-RUN apt-get install -y python3
-RUN apt-get install -y python3-pip
-RUN apt install -y python3.12-venv
-RUN git clone https://github.com/peanut-weanut/DivergentAssociationsDaily.git
+FROM python:3.9-slim
 
-WORKDIR /usr/local/app/DivergentAssociationsDaily/web-client
+# Set working directory for the backend
+WORKDIR /app
 
-COPY startup.sh startup.sh
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    git \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
 
-CMD ["bash","./startup.sh"]
+# Clone the repository
+RUN git clone https://github.com/peanut-weanut/DivergentAssociationsDaily.git /app/repo
+
+# Set working directory to the backend directory
+WORKDIR /app/repo/ecs-server
+
+# Install Python dependencies
+RUN pip install --no-cache-dir flask flask-cors numpy gunicorn
+
+# Make sure our application is accessible outside the container
+ENV HOST=0.0.0.0
+ENV PORT=8080
+
+# Expose the port the app runs on
+EXPOSE 8080
+
+# Create a simple startup script
+RUN echo '#!/bin/bash\n\
+echo "Starting Flask application..."\n\
+exec gunicorn --bind 0.0.0.0:$PORT --workers 1 --threads 8 --timeout 0 DAG_backend:app\n'\
+> /app/startup.sh && chmod +x /app/startup.sh
+
+# Run the startup script
+CMD ["/app/startup.sh"]
