--- a/ecs-server/Dockerfile
+++ b/ecs-server/Dockerfile
@@ -1,28 +1,16 @@
-FROM python:3.10-slim
+FROM python:3.9-slim
 
 WORKDIR /app
 
-# Install git and basic dependencies
-RUN apt-get update && \
-    apt-get install -y git build-essential && \
-    rm -rf /var/lib/apt/lists/*
+# Copy requirements first
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Clone the repository
-RUN git clone https://github.com/peanut-weanut/DivergentAssociationsDaily.git /app/repo
+# Copy the current directory contents into the container
+COPY . .
 
-# Set up the working directory
-WORKDIR /app/repo/ecs-server
-
-# Install Python dependencies 
-RUN pip install flask flask-cors numpy scipy gunicorn
-
-# Set environment variables
-ENV HOST=0.0.0.0
-ENV PORT=8080
-
-# Expose the port
+# Make port 8080 available
 EXPOSE 8080
 
-COPY startup.sh startup.sh
-
-CMD ["bash","startup.sh"]
+# Run with gunicorn for better performance
+CMD ["gunicorn", "--bind", "0.0.0.0:8080", "--workers", "1", "--threads", "8", "--timeout", "0", "DAG_backend:app"]
