removed goslat, added stuff to dockerignore and makefile

--- a/ecs-server/.dockerignore
+++ b/ecs-server/.dockerignore
@@ -11,3 +11,26 @@ ENV/
 .vscode/
 .idea/
 *.log
+backend/
+.pytest_cache/
+src/
+
+glove.6B.50d.txt
+glove.6B.100d.txt
+glove.6B.200d.txt
+glove.6B.300d.txt
+glove.840B.300d.txt
+ourwords.txt
+measureMillis.py
+nouns.txt
+profile_results.txt
+DAG_backend_test.py
+createNounsList.py
+createDatesForCsv.py
+profiler.py
+README.py
+word-list.csv
+words.txt
+writeDefinitions.py
+CSW.py
+verifyNounsList.py
