--- a/ecs-server/.dockerignore
+++ b/ecs-server/.dockerignore
@@ -15,22 +15,17 @@ backend/
 .pytest_cache/
 src/
 
-glove.6B.50d.txt
-glove.6B.100d.txt
-glove.6B.200d.txt
-glove.6B.300d.txt
-glove.840B.300d.txt
-ourwords.txt
+*.txt
+!glove.42B.300d.txt
+!requirements.txt
+
 measureMillis.py
-nouns.txt
-profile_results.txt
 DAG_backend_test.py
 createNounsList.py
 createDatesForCsv.py
 profiler.py
 README.py
 word-list.csv
-words.txt
 writeDefinitions.py
 CSW.py
 verifyNounsList.py
